# src/docs/swagger.yaml
@@ -13,6 +13,13 @@ definitions:
       refreshToken:
         type: string
     type: object
+  response.ResSignInGoogleOAuth:
+    properties:
+      accessToken:
+        type: string
+      refreshToken:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -28,7 +35,7 @@ paths:
         "200":
           description: OK
           schema:
-            type: boolean
+            $ref: '#/definitions/response.ResSignInGoogleOAuth'
         "400":
           description: Bad Request
           schema:
